sign up ui fix: added picture, font-weight change, grid system updated, responsiveness OK, text-alignment changed

--- a/src/components/SignUp/SignUp.css
+++ b/src/components/SignUp/SignUp.css
@@ -3,7 +3,15 @@
 }
 
 .signup-info {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
     margin-bottom: 20px;
+    margin-right: 8vw;
+}
+
+.signup-info h1 {
+    color : orange;
 }
 
 .signup-info p {
@@ -16,7 +24,8 @@
 
     border: 2px solid transparent;
     border-radius: 5px;
-
+    flex-grow: 1;
+    flex-basis: auto;
     -webkit-box-shadow: 0px 2px 8px -2px rgba(0,0,0,0.75);
     -moz-box-shadow: 0px 2px 8px -2px rgba(0,0,0,0.75);
     box-shadow: 0px 2px 8px -2px rgba(0,0,0,0.75);
@@ -69,27 +78,68 @@
     margin-top: 10px;
 }
 
+#signuppic {
+    width: 500px;
+}
+
+@media (min-width: 200px) {
+    .signup-wrapper {
+        margin-top: 5vw;
+    }
+
+    .signup-info {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin: auto 0 auto 0;
+        text-align: center;
+    }
+    .signup-info h1 {
+        font-size: 28px;
+        font-weight: 600;
+        margin: 0 auto 1rem auto;
+    }
+    .signup-info p {
+        display: block
+    }
+
+    #signuppic {
+        width: 350px;
+    } 
+}
+
 @media (min-width: 450px) {
     .signup-wrapper {
         margin-top: 5vw;
     }
     .signup-info {
-        margin-bottom: 10px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin: auto 0 auto 0;
     }
     .signup-info h1 {
         font-size: 28px;
+        margin: 0 auto 1rem auto;
     }
     .signup-info p {
         display: block
     }
+
+    #signuppic {
+        width: 350px;
+    } 
 }
 
 @media (min-width: 768px) {
     .signup-wrapper {
         margin-top: 3vw;
     }
+    
     .signup-info {
         margin-top: 20px;
+        text-align: left;
     }
     .signup-info h1 {
         font-size: 32px;
